--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ const redirectUrl = cleanBase + 'ja/';
     <meta http-equiv="refresh" content={`0;url=${redirectUrl}`} />
     <link rel="canonical" href={redirectUrl} />
     <meta name="robots" content="noindex" />
-    <title>Redirecting...</title>
+    <script define:vars={{ redirectUrl }}>
+        window.location.replace(redirectUrl);
+    </script>
 </head>
 <body></body>
 </html>
