--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -432,7 +432,7 @@ researchFocus.sort((a, b) => a.data.order - b.data.order);
     gap: 1.5rem;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 2rem 0 ;
   }
 
   /* Specific Card Styles */
@@ -843,7 +843,7 @@ researchFocus.sort((a, b) => a.data.order - b.data.order);
   .hero-container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0rem 1rem;
     display: flex;
     gap: 3rem;
     align-items: center;
