--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -89,8 +89,12 @@ researchFocus.sort((a, b) => a.data.order - b.data.order);
       </div>
       <div class="hero-image">
         <img
-          src={resolvePath("/lab_guidelines_insight.png")}
+          src={resolvePath("/lab_guidelines_insight.webp")}
           alt="Lab Research Insight"
+          loading="eager"
+          decoding="async"
+          width="200"
+          height="200"
         />
       </div>
     </div>
